--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,7 @@ main {
 }
 
 body {
-  font-family: "SF Pro Display", "SF Pro Text", -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+  font-family: "Poppins", "Montserrat", -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Helvetica", "Arial", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #ffffff;
@@ -56,42 +56,6 @@ body {
   --apple-light-gray: #f5f5f7;
   --apple-text-gray: #86868b;
   --apple-dark-gray: #6e6e73;
-}
-
-@font-face {
-  font-family: "SF Pro Display";
-  font-weight: 100;
-  src: local("SF Pro Display"), url("https://developer.apple.com/design/resources/SF-Pro-Display-Ultralight.otf");
-}
-
-@font-face {
-  font-family: "SF Pro Display";
-  font-weight: 300;
-  src: local("SF Pro Display"), url("https://developer.apple.com/design/resources/SF-Pro-Display-Light.otf");
-}
-
-@font-face {
-  font-family: "SF Pro Display";
-  font-weight: 400;
-  src: local("SF Pro Display"), url("https://developer.apple.com/design/resources/SF-Pro-Display-Regular.otf");
-}
-
-@font-face {
-  font-family: "SF Pro Display";
-  font-weight: 500;
-  src: local("SF Pro Display"), url("https://developer.apple.com/design/resources/SF-Pro-Display-Medium.otf");
-}
-
-@font-face {
-  font-family: "SF Pro Display";
-  font-weight: 600;
-  src: local("SF Pro Display"), url("https://developer.apple.com/design/resources/SF-Pro-Display-Semibold.otf");
-}
-
-@font-face {
-  font-family: "SF Pro Display";
-  font-weight: 700;
-  src: local("SF Pro Display"), url("https://developer.apple.com/design/resources/SF-Pro-Display-Bold.otf");
 }
 
 .fade-in {
